# fractl

./: .gitignore  Args.cc  CMakeLists.txt  Cell.hh  Dwitter.cc  FileSpec.hh  Filters.cc  Filters.hh  Fractl.cc  Fractl.hh  FractlConfig.h.in  Interps.cc  Interps.hh  LeiseFilter.cc  Makefile  Mas2.cc  Params.hh  Pconv.cc  Point.hh  README.md  Statistic.hh  Utils.cc  Utils.hh  calcWinds.cc  ced.txt  do_build_fractl  paramdef.Fractl  paramdef.fractl  readPreGridded.cc  readRadx.cc  writeNetCdf.cc
cmake/modules/: FindGeographicLib.cmake  lrose-config.cmake
eigen3/: LICENSE
src/: Bbox.hh  CMakeLists.txt  Fractl.cc  Fractl.hh  FractlConfig.h  LeiseInterp.cc  Params.cc  Params.hh  Point.hh  RadarWindInterp.cc  Statistic.hh  Utils.cc  calcWinds.cc  readRadx.cc
