# cmake for fractl src subdirs

project(fractl)

# compile definitions

add_definitions(-std=c++11)

# If needed, generate TDRP Params.cc and Params.hh files
# from their associated paramdef.<app> file

makeTdrpParams()

# includes

include_directories(${LROSE_PREFIX}/include)
include_directories(${LROSE_INSTALL_DIR}/include)
include_directories(${EIGEN3_INCLUDE_DIR})

if (DEFINED netCDF_INSTALL_PREFIX)
  include_directories (${netCDF_INSTALL_PREFIX}/include)
endif()
if (DEFINED HDF5_C_INCLUDE_DIR)
  include_directories (${HDF5_C_INCLUDE_DIR})
endif()
if(IS_DIRECTORY /usr/include/hdf5/serial)
  include_directories (/usr/include/hdf5/serial)
endif()
if(IS_DIRECTORY /usr/local/include)
  include_directories (/usr/local/include)
endif()

# Link

link_directories(${LROSE_PREFIX}/lib)
link_directories(${LROSE_INSTALL_DIR}/lib)

if (DEFINED netCDF_INSTALL_PREFIX)
  link_directories (${netCDF_INSTALL_PREFIX}/lib)
endif()
if (DEFINED HDF5_INSTALL_PREFIX)
  link_directories (${HDF5_INSTALL_PREFIX}/lib)
endif()
if (DEFINED HDF5_LIBRARY_DIRS)
  link_directories(${HDF5_LIBRARY_DIRS})
endif()
# add serial, for odd Debian hdf5 install
if(IS_DIRECTORY /usr/lib/x86_64-linux-gnu/hdf5/serial)
  link_directories(/usr/lib/x86_64-linux-gnu/hdf5/serial)
endif()
if(IS_DIRECTORY /usr/local/lib)
  link_directories (/usr/local/lib)
endif()

# add serial, for odd Debian hdf5 install

if(IS_DIRECTORY /usr/lib/x86_64-linux-gnu/hdf5/serial)
  link_directories(/usr/lib/x86_64-linux-gnu/hdf5/serial)
endif()

# location of bin as it is built

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/release/bin)

# build app

add_executable (
  ${PROJECT_NAME}
  Args.cc
  Filters.cc
  Fractl.cc
  Interps.cc
  LeiseFilter.cc
  LeiseInterp.cc
  Params.cc # automatically generated by a custom command from the LROSE package
  RadarWindInterp.cc
  Utils.cc
  calcWinds.cc
  readPreGridded.cc
  readRadx.cc
  writeNetCdf.cc
  )

# link

target_link_libraries(${PROJECT_NAME} ${LROSE_LIBRARIES})
target_link_libraries(${PROJECT_NAME} bz2)

# install

set(INSTALL_PREFIX $ENV{FRACTL_INSTALL_DIR})

if(NOT INSTALL_PREFIX)
  set(INSTALL_PREFIX ${LROSE_PREFIX})
endif(NOT INSTALL_PREFIX)

install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_PREFIX}/bin)

